--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -6,6 +6,18 @@ hr {
 	margin: 1px 0px;
 }
 
+.white-font {
+	color: white;
+	margin-left: 1.3rem;
+	font-size: 1.3rem;
+	font-weight: 600;
+}
+
+.starbucks-logo {
+	width: 50px;
+	height: 50px;
+}
+
 .selected.orderlist {
 	background-color: #D9D9D9;
 }
@@ -41,14 +53,17 @@ hr {
 }
 .pos-btn {
     text-align: center;
-    height: 50px;
-    margin: 10px 0px;
+    height: 57px;
+    margin: 6px 0px;
     font-weight: 600;
 }
 .pos-category-btn {
     background-color: gray;
     border: 4px solid black;
     color: white;
+}
+.pos-menu-grid {
+	padding: 0px 8px;
 }
 .pos-menu-btn {
     background-color: #D9D9D9;
