--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -77,6 +77,8 @@ hr {
 .pos-menu-btn {
     background-color: #D9D9D9;
     border: 4px solid #D9D9D9;
+    font-size: 13px;
+    font-weight: 600;
 }
 .grid-gray {
     border : 4px solid gray;
