--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -62,7 +62,7 @@ hr {
 }
 .pos-btn {
     text-align: center;
-    height: 57px;
+    height: 50px;
     margin: 6px 0px;
     font-weight: 600;
 }
@@ -74,7 +74,9 @@ hr {
 .pos-menu-grid {
 	padding: 0px 8px;
 }
-.pos-menu-btn {
+.pos-btn.pos-menu-btn {
+	border-radius: 12px;
+	height: 150px !important;
     background-color: #D9D9D9;
     border: 4px solid #D9D9D9;
     font-size: 13px;
@@ -90,7 +92,7 @@ hr {
     height: 360px;
 }
 .pos-btn.selected {
-    background-color: #FF5757;
+    background-color: #28A745;
     color: black;
     border: 4px solid black;
 }
