--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,5 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,500,700,900&display=swap&subset=korean');
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800&display=swap&subset=korean');
+
 p {
-    margin-bottom: 0px;
+	margin-bottom: 0px;
+	font-family: 'Nanum Gothic';
+	font-weight: 400;
+	font-size: 20px;
+}
+
+h5 {
+	font-family: 'Nanum Gothic';
 }
 
 hr {
@@ -60,10 +70,18 @@ hr {
 .float-right {
     float: right;
 }
+
+.vertical-center.pos-btn {
+	display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .pos-btn {
     text-align: center;
     height: 50px;
     margin: 6px 0px;
+    font-family: 'Nanum Gothic';
     font-weight: 600;
 }
 .pos-category-btn {
@@ -97,9 +115,10 @@ hr {
     border: 4px solid black;
 }
 .pay-btn {
-    width: 150px;
+    width: 190px;
     height: 50px;
-    font-size: 20px;
+    font-family: 'Nanum Gothic';
+	font-size: 20px;
 }
 .menu-font {
     color: #7ED957;
@@ -123,4 +142,14 @@ hr {
 	position: fixed;
 	left: 50%;
 	top: 50%;
+}
+
+.menu-name{
+	height: 55px;
+	font-size: 15px;
+}
+
+.personal-btn{
+	font-family: 'Nanum Gothic';
+	font-size: 18px;
 }
