--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -153,3 +153,8 @@ hr {
 	font-family: 'Nanum Gothic';
 	font-size: 18px;
 }
+
+.charge-amount{
+	font-family: 'Nanum Gothic';
+	font-size: 18px;
+}
