--- a/src/main/webapp/resources/css/bootstrap.css
+++ b/src/main/webapp/resources/css/bootstrap.css
@@ -2491,6 +2491,8 @@ fieldset:disabled a.btn {
   color: #fff;
   background-color: #28a745;
   border-color: #28a745;
+  font-family: "Nanum Gothic";
+  font-size: 18px;
 }
 
 .btn-success:hover {
@@ -2502,7 +2504,7 @@ fieldset:disabled a.btn {
 .btn-success:focus, .btn-success.focus {
   box-shadow: 0 0 0 0.2rem rgba(72, 180, 97, 0.5);
 }
-
+spinner
 .btn-success.disabled, .btn-success:disabled {
   color: #fff;
   background-color: #28a745;
@@ -6433,11 +6435,12 @@ a.close.disabled {
   width: 2rem;
   height: 2rem;
   vertical-align: text-bottom;
-  border: 0.25em solid currentColor;
+  border: 0.25em solid green;
   border-right-color: transparent;
   border-radius: 50%;
   -webkit-animation: spinner-border .75s linear infinite;
   animation: spinner-border .75s linear infinite;
+  z-index: 1051;
 }
 
 .spinner-border-sm {
