--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -16,6 +16,7 @@ hr {
 	margin: 1px 0px;
 }
 
+
 #tumblerIcon:hover {
 	transform: rotate( 28deg );
 }
@@ -94,15 +95,16 @@ hr {
     color: white;
 }
 .pos-menu-grid {
-	padding: 0px 8px;
+	padding: 0px 12px 0px 0px;
 }
 .pos-btn.pos-menu-btn {
 	border-radius: 12px;
-	height: 150px !important;
+	height: 160px !important;
     background-color: #D9D9D9;
     border: 4px solid #D9D9D9;
     font-size: 13px;
     font-weight: 600;
+    
 }
 .grid-gray {
     border : 4px solid gray;
